# Itanoru

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  devenv.nix
.githooks/: pre-commit
src/: commands.rs  gallery-dl.conf  gemeni.rs  main.rs  pinterest.rs  stickers.rs
