[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
rand = "0.8"
image = "0.24"
futures = "0.3"
chrono = "0.4.38"

[[bin]]
name = "rust"
path = "src/main.rs"
