[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
rand = "0.8"
futures = "0.3"
chrono = "0.4.38"
imagesize = "0.12.0"
urlencoding = "2.1.3"
oxipng = "9.1.1"
image = { version = "0.25", features = ["png"] }

[[bin]]
name = "rust"
path = "src/main.rs"
