[package]
name = "itanoru"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.39"
emojis = "0.6.4"
image = "0.25.5"
lazy_static = "1.5.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.134"
teloxide = { version = "0.13", features = ["macros"] }
tokio = { version = "1.42.0", features = ["full"] }


[[bin]]
name = "itanoru"
path = "src/main.rs"
